--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
       }catch(ex){ $('#fpw_msg').textContent = ex.message; }
       finally{ setBusy($('#fpw_submit'), false); }
     });
+  </script>
     <script type="module">
       // Avoid double-binding if this script is included twice
       if (!window.__rp_signin_bound) {
