--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
   <main class="card" role="main" aria-labelledby="title">
     <h1 id="title">Sign in</h1>
-    <p class="sub">Use your <strong>User ID</strong> or <strong>Email</strong> and your password.</p>
+    <p class="sub">1Use your <strong>User ID</strong> or <strong>Email</strong> and your password.</p>
 
     <form id="loginForm" novalidate>
       <label for="id">User ID or Email</label>
