--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Resell Pro — Sign In</title>
-  <meta name="description" content="Sign in to Resell Pro" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Resell Pro • Sign In</title>
+  <meta name="color-scheme" content="dark light">
+  <style>
+    :root{--bg:#0b0f19;--panel:#0f172a;--txt:#e7ecf3;--muted:#a6b3c6;--accent:#7dd3fc;--danger:#ef4444;--ok:#22c55e}
+    *{box-sizing:border-box;font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
+    body{margin:0;background:linear-gradient(180deg,#0b0f19,#0e1423);color:var(--txt);min-height:100dvh;display:grid;place-items:center;padding:24px}
+    .card{width:min(480px,100%);background:rgba(15,23,42,.8);border:1px solid rgba(125,211,252,.18);border-radius:20px;box-shadow:0 10px 40px rgba(0,0,0,.35);padding:20px 18px}
+    h1{margin:0 0 6px;font-size:22px}
+    p.sub{margin:0 0 16px;color:var(--muted);font-size:14px}
+    label{display:block;font-size:13px;color:var(--muted);margin:14px 0 6px}
+    .row{display:flex;gap:10px;align-items:center}
+    .in{width:100%;padding:12px 14px;border-radius:12px;border:1px solid #22304a;background:#0b1529;color:var(--txt);font-size:16px;outline:none}
+    .in:focus{border-color:var(--accent);box-shadow:0 0 0 3px rgba(125,211,252,.18)}
+    .btn{display:inline-flex;align-items:center;justify-content:center;gap:8px;padding:12px 14px;border-radius:12px;border:1px solid #27415c;background:#112036;color:var(--txt);font-weight:600;cursor:pointer;width:100%}
+    .btn.primary{background:linear-gradient(180deg,#24b2e7,#1686b8);border-color:#1d9fd3}
+    .btn:disabled{opacity:.6;cursor:not-allowed}
+    .muted{color:var(--muted);font-size:13px}
+    .links{display:flex;justify-content:space-between;gap:8px;margin-top:10px}
+    .a{color:var(--accent);text-decoration:none;font-size:13px}
+    .a:hover{text-decoration:underline}
+    .err{color:var(--danger);font-size:13px;margin-top:8px;display:none}
+    .ok{color:var(--ok);font-size:13px;margin-top:8px;display:none}
+    .eye{cursor:pointer;user-select:none;padding:0 8px}
+    .pw-wrap{display:flex;align-items:center;gap:8px}
+    .divider{height:1px;background:#1b2942;margin:16px 0}
+    .foot{margin-top:12px;text-align:center;font-size:12px;color:var(--muted)}
+    dialog{border:none;border-radius:16px;padding:0;width:min(420px,94%);background:#0f172a;color:var(--txt)}
+    .modal{padding:16px}
+    .modal h2{margin:0 0 8px;font-size:18px}
+    .modal .actions{display:flex;gap:8px;margin-top:14px}
+    .x{position:absolute;top:8px;right:10px;background:transparent;border:none;color:var(--muted);font-size:18px;cursor:pointer}
+    @media (prefers-reduced-motion:no-preference){.btn.primary:active{transform:translateY(1px)}}
+  </style>
 </head>
 <body class="rp-bg">
   <main class="rp-center">
