--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <p class="foot">Having trouble? Ask a manager to reset your account.</p>
   </main>
 
-  //<script src="/assets/js/app.js" defer></script>
-  //<script src="/assets/js/auth.js" defer></script>
+  <script src="/assets/js/app.js" defer></script>
+  <script src="/assets/js/auth.js" defer></script>
 </body>
 </html>
