--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -1,10 +1,25 @@
+<style>
+  /* Local to this fragment: keeps labels stuck to inputs and improves rhythm */
+  .cd-controls { display: flex; flex-wrap: wrap; gap: 8px; align-items: center; }
+  .cd-card { border: 1px solid var(--border, #2a2a2a); border-radius: 6px; padding: 12px; }
+  .cd-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 12px; }
+  .cd-field { display: inline-flex; align-items: center; justify-content: space-between; gap: 10px; white-space: nowrap; }
+  .cd-field > input { width: 110px; }
+  .cd-totals { display: grid; gap: 6px; }
+  .cd-actions { display: flex; align-items: center; justify-content: space-between; gap: 12px; }
+  @media (max-width: 640px) {
+    .cd-actions { flex-direction: column; align-items: stretch; }
+    #btnSave { width: 100%; }
+  }
+</style>
+
 <div class="p-4 space-y-4">
   <header class="flex flex-col sm:flex-row sm:items-end sm:justify-between gap-3">
     <div>
       <h2 class="text-xl font-semibold">Cash Drawer</h2>
       <p class="opacity-70 text-sm">Record opening/closing counts. Totals update automatically.</p>
     </div>
-    <div class="flex flex-wrap gap-2">
+    <div class="cd-controls">
       <select id="drawer" class="border rounded px-2 py-1">
         <option value="1">Drawer 1</option>
       </select>
@@ -14,46 +29,51 @@
         <option value="CLOSE">Close</option>
       </select>
       <button id="btnLoad" class="border rounded px-3 py-1">Load Today</button>
-      <button id="btnSave" class="border rounded px-3 py-1" disabled>Save</button>
       <button id="btnPing" class="border rounded px-3 py-1">Check connection</button>
     </div>
   </header>
 
   <section class="grid grid-cols-1 lg:grid-cols-2 gap-4">
-    <div class="border rounded p-3">
+    <div class="cd-card">
       <h3 class="font-medium mb-2">Coins</h3>
-      <div class="grid grid-cols-2 gap-2">
-        <label>Pennies (¢1) <input type="number" id="pennies" class="w-full border rounded px-2 py-1" min="0" step="1"></label>
-        <label>Nickels (¢5) <input type="number" id="nickels" class="w-full border rounded px-2 py-1" min="0" step="1"></label>
-        <label>Dimes (¢10) <input type="number" id="dimes" class="w-full border rounded px-2 py-1" min="0" step="1"></label>
-        <label>Quarters (¢25) <input type="number" id="quarters" class="w-full border rounded px-2 py-1" min="0" step="1"></label>
-        <label>Half-dollars (¢50) <input type="number" id="halfdollars" class="w-full border rounded px-2 py-1" min="0" step="1"></label>
+      <div class="cd-grid">
+        <label class="cd-field"><span>Pennies (¢1)</span><input type="number" id="pennies" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>Nickels (¢5)</span><input type="number" id="nickels" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>Dimes (¢10)</span><input type="number" id="dimes" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>Quarters (¢25)</span><input type="number" id="quarters" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>Half-dollars (¢50)</span><input type="number" id="halfdollars" class="border rounded px-2 py-1" min="0" step="1"></label>
       </div>
       <div class="mt-3 text-right">Coin total: <strong id="coin_total">$0.00</strong></div>
     </div>
 
-    <div class="border rounded p-3">
+    <div class="cd-card">
       <h3 class="font-medium mb-2">Bills</h3>
-      <div class="grid grid-cols-2 gap-2">
-        <label>$1s <input type="number" id="ones" class="w-full border rounded px-2 py-1" min="0" step="1"></label>
-        <label>$2s <input type="number" id="twos" class="w-full border rounded px-2 py-1" min="0" step="1"></label>
-        <label>$5s <input type="number" id="fives" class="w-full border rounded px-2 py-1" min="0" step="1"></label>
-        <label>$10s <input type="number" id="tens" class="w-full border rounded px-2 py-1" min="0" step="1"></label>
-        <label>$20s <input type="number" id="twenties" class="w-full border rounded px-2 py-1" min="0" step="1"></label>
-        <label>$50s <input type="number" id="fifties" class="w-full border rounded px-2 py-1" min="0" step="1"></label>
-        <label>$100s <input type="number" id="hundreds" class="w-full border rounded px-2 py-1" min="0" step="1"></label>
+      <div class="cd-grid">
+        <label class="cd-field"><span>$1s</span><input type="number" id="ones" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>$2s</span><input type="number" id="twos" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>$5s</span><input type="number" id="fives" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>$10s</span><input type="number" id="tens" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>$20s</span><input type="number" id="twenties" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>$50s</span><input type="number" id="fifties" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>$100s</span><input type="number" id="hundreds" class="border rounded px-2 py-1" min="0" step="1"></label>
       </div>
       <div class="mt-3 text-right">Bill total: <strong id="bill_total">$0.00</strong></div>
     </div>
   </section>
 
-  <section class="border rounded p-3">
-    <label class="block mb-2">Notes
-      <textarea id="notes" class="w-full border rounded px-2 py-1" rows="3" placeholder="Any notes…"></textarea>
-    </label>
-    <div class="flex items-center justify-between">
-      <div>Grand total: <strong id="grand_total" class="text-lg">$0.00</strong></div>
+  <section class="cd-card">
+    <label class="block mb-2">Notes</label>
+    <textarea id="notes" class="w-full border rounded px-2 py-1" rows="4" placeholder="Any notes…"></textarea>
+
+    <div class="cd-totals mt-4">
+      <div>Coin total: <strong id="coin_total_footer">$0.00</strong></div>
+      <div>Bill total: <strong id="bill_total_footer">$0.00</strong></div>
+      <div class="text-lg">Grand total: <strong id="grand_total">$0.00</strong></div>
+    </div>
+
+    <div class="cd-actions mt-3">
       <div id="status" class="opacity-70 text-sm"></div>
+      <button id="btnSave" class="border rounded px-3 py-1" disabled>Save</button>
     </div>
   </section>
 </div>
