--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -2,15 +2,14 @@
   /* Local to this fragment */
   .cd-controls { display: flex; flex-wrap: wrap; gap: 8px; align-items: center; }
   .cd-card { border: 1px solid var(--border, #2a2a2a); border-radius: 6px; padding: 12px; }
-  .cd-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 12px; }
 
-  /* Keep label + input together in two columns with a small gap */
+  /* Grid of compact pairs; each pair keeps label immediately next to its input */
+  .cd-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 12px; }
   .cd-field {
-    display: grid;
-    grid-template-columns: auto 120px;
+    display: inline-flex;
     align-items: center;
-    column-gap: 12px;
-    white-space: nowrap;
+    gap: 10px;            /* small gap between label and input */
+    white-space: nowrap;  /* prevent label wrap away from input */
   }
   .cd-field > input { width: 120px; }
 
@@ -19,6 +18,12 @@
 
   .cd-totals { display: grid; gap: 6px; }
   .cd-actions { display: flex; align-items: center; justify-content: space-between; gap: 12px; }
+
+  /* Save button: larger, green when enabled; muted when disabled */
+  #btnSave { padding: 10px 18px; border-radius: 10px; border: 1px solid #1b3327; opacity: 0.7; }
+  #btnSave:not(:disabled) { background: #16a34a; color: #0b1a10; border-color: #13803a; opacity: 1; cursor: pointer; }
+  #btnSave:disabled { background: #23303f; color: #8aa0b6; border-color: #2a3a4d; cursor: not-allowed; }
+
   @media (max-width: 640px) {
     .cd-actions { flex-direction: column; align-items: stretch; }
     #btnSave { width: 100%; }
@@ -41,7 +46,7 @@
         <option value="CLOSE">Close</option>
       </select>
       <button id="btnLoad" class="border rounded px-3 py-1">Load Today</button>
-      <button id="btnPing" class="border rounded px-3 py-1">Check connection</button>
+      
     </div>
   </header>
 
