--- a/app.html
+++ b/app.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Resell Pro • App</title>
-  <style>
+    <style>
     /* Theme tokens — light is default */
     :root {
       --bg: #f6f8fb;
@@ -13,6 +13,15 @@
       --muted: #5b6b80;
       --accent: #0ea5e9;
       --border: #d6dee8;
+  
+      /* Button palette (light) */
+      --info:   #0ea5e9;  /* primary blue */
+      --ok:     #16a34a;  /* success green */
+      --warn:   #f59e0b;  /* warning amber */
+      --danger: #ef4444;  /* danger red */
+      --neutral-bg: #f2f5f9;
+      --neutral-ink: #223042;
+      --ink-on-color: #ffffff; /* text on colored buttons */
     }
   
     /* Respect user dark preference without changing your default */
@@ -24,6 +33,15 @@
         --muted:#a6b3c6;
         --accent:#7dd3fc;
         --border:#202a44;
+  
+        /* Button palette (dark) */
+        --info:   #38bdf8;
+        --ok:     #22c55e;
+        --warn:   #fbbf24;
+        --danger: #f87171;
+        --neutral-bg: #0f172a;
+        --neutral-ink: #e7ecf3;
+        --ink-on-color: #0b1220; /* darker ink on bright colors for dark mode comfort */
       }
     }
   
@@ -85,6 +103,73 @@
     @media(min-width:900px){
       nav{position:static; transform:none; max-width:260px; width:260px}
       .wrap{display:grid; grid-template-columns:260px 1fr; gap:14px}
+    }
+  
+    /* ===============================
+       Global Button System (reusable)
+       =============================== */
+  
+    .btn {
+      --btn-bg: var(--neutral-bg);
+      --btn-ink: var(--neutral-ink);
+      --btn-bd: var(--border);
+  
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      gap:.5rem;
+  
+      font-weight:600;
+      line-height:1;
+      padding:10px 16px;
+      border-radius:10px;
+  
+      border:1px solid var(--btn-bd);
+      background:var(--btn-bg);
+      color:var(--btn-ink);
+  
+      text-decoration:none;
+      user-select:none;
+      white-space:nowrap;
+  
+      transition: transform .12s ease, box-shadow .12s ease,
+                  background-color .12s ease, border-color .12s ease, color .12s ease;
+    }
+  
+    /* Sizes */
+    .btn--sm { padding:8px 12px; font-size:.92rem; border-radius:9px; }
+    .btn--md { /* default */ }
+    .btn--lg { padding:12px 18px; font-size:1rem; border-radius:12px; }
+    .btn--block { width:100%; }
+  
+    /* Variants */
+    .btn--primary { --btn-bg: var(--info);   --btn-ink: var(--ink-on-color); --btn-bd: color-mix(in srgb, var(--info) 78%, #000 22%); }
+    .btn--success { --btn-bg: var(--ok);     --btn-ink: var(--ink-on-color); --btn-bd: color-mix(in srgb, var(--ok) 78%, #000 22%); }
+    .btn--warning { --btn-bg: var(--warn);   --btn-ink: var(--ink-on-color); --btn-bd: color-mix(in srgb, var(--warn) 78%, #000 22%); }
+    .btn--danger  { --btn-bg: var(--danger); --btn-ink: var(--ink-on-color); --btn-bd: color-mix(in srgb, var(--danger) 78%, #000 22%); }
+  
+    /* Neutral / ghost */
+    .btn--neutral { --btn-bg: var(--neutral-bg); --btn-ink: var(--neutral-ink); --btn-bd: var(--border); }
+    .btn--ghost   { --btn-bg: transparent;       --btn-ink: var(--txt);         --btn-bd: var(--border); }
+  
+    /* Hover & active motion (respect reduced motion) */
+    @media (prefers-reduced-motion: no-preference) {
+      .btn:not(:disabled):hover { transform: translateY(-1px); box-shadow: 0 2px 6px color-mix(in srgb, var(--btn-bd) 40%, transparent); }
+      .btn:not(:disabled):active { transform: translateY(0); box-shadow: none; }
+    }
+  
+    /* Focus ring */
+    .btn:focus-visible {
+      outline: 2px solid var(--accent);
+      outline-offset: 2px;
+    }
+  
+    /* Disabled */
+    .btn:disabled {
+      opacity: .55;
+      cursor: not-allowed;
+      transform: none;
+      box-shadow: none;
     }
   </style>
 </head>
