--- a/app.html
+++ b/app.html
@@ -16,7 +16,7 @@
   
       /* Button palette (light) */
       --info:   #0ea5e9;  /* primary blue */
-      --ok:     #16a34a;  /* success green */
+      --ok:     #00BB55;  /* success green */
       --warn:   #f59e0b;  /* warning amber */
       --danger: #ef4444;  /* danger red */
       --neutral-bg: #f2f5f9;
@@ -36,7 +36,7 @@
   
         /* Button palette (dark) */
         --info:   #38bdf8;
-        --ok:     #22c55e;
+        --ok:     #00BB55;
         --warn:   #fbbf24;
         --danger: #f87171;
         --neutral-bg: #0f172a;
