--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -45,7 +45,7 @@
         <option value="OPEN">Open</option>
         <option value="CLOSE">Close</option>
       </select>
-      <button id="btnLoad" class="border rounded px-3 py-1">Load Today</button>
+      <button id="btnLoad" class="btn btn--neutral btn--sm">Load Today</button>
       
     </div>
   </header>
@@ -90,7 +90,7 @@
 
     <div class="cd-actions mt-3">
       <div id="status" class="opacity-70 text-sm"></div>
-      <button id="btnSave" class="border rounded px-3 py-1" disabled>Save</button>
+      <button id="btnSave" class="btn btn--success btn--lg" disabled>Save</button>
     </div>
   </section>
 </div>
