--- a/screens/settings-users.html
+++ b/screens/settings-users.html
@@ -8,13 +8,13 @@
     <button id="btnInvite" class="btn btn--ghost btn--sm" title="Coming soon">Send invite (email)</button>
   </div>
 
-  <div id="usersTable" class="tile" style="overflow:auto;">
+  <div id="usersTable" class="tile" style="overflow:auto; min-height:48px;">
     <!-- populated by JS -->
   </div>
 </section>
 
-<!-- Add/Edit modal (simple inline) -->
-<section id="userModal" class="tile" style="display:none; position:sticky; top:10px;">
+<!-- Add/Edit user modal -->
+<section id="userModal" class="tile" style="display:none; position:sticky; top:12px; z-index:2;">
   <h3 id="umTitle">Add user</h3>
   <form id="userForm" style="display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:12px;">
     <label> Name
@@ -33,6 +33,9 @@
         <option value="admin">Admin</option>
         <option value="owner">Owner</option>
       </select>
+    </label>
+    <label> Temporary password
+      <input id="umTempPass" type="text" inputmode="text" autocomplete="off" placeholder="optional for now" />
     </label>
 
     <fieldset style="grid-column:1/-1; border:1px solid var(--border); border-radius:10px; padding:10px;">
@@ -56,7 +59,7 @@
       <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:8px;">
         <label><input type="checkbox" id="notify_cash_drawer"> Notify: Cash Drawer</label>
         <label><input type="checkbox" id="notify_daily_sales_summary"> Notify: Daily Sales Summary</label>
-        <label>Max discount (%) — blank = unlimited
+        <label> Max discount (%) — blank = unlimited
           <input id="discount_max" type="number" step="0.01" min="0" max="100" placeholder="">
         </label>
       </div>
