--- a/screens/settings-user-new.html
+++ b/screens/settings-user-new.html
@@ -46,7 +46,7 @@
     </fieldset>
 
     <div style="display:flex; gap:10px;">
-      <button id="save" class="btn btn--success btn--md" type="submit">Save</button>
+      <button id="save" class="btn btn--success btn--md" type="button">Save</button>
       <a class="btn btn--ghost btn--md" href="?page=settings">Cancel</a>
     </div>
   </form>
