--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -8,12 +8,11 @@
   .cd-field {
     display: inline-flex;
     align-items: center;
-    gap: 10px;            /* small gap between label and input */
-    white-space: nowrap;  /* prevent label wrap away from input */
+    gap: 10px;
+    white-space: nowrap;
   }
   .cd-field > input { width: 120px; }
 
-  /* Notes full width and taller */
   .cd-card textarea { width: 100%; min-height: 88px; }
 
   .cd-totals { display: grid; gap: 6px; }
@@ -41,7 +40,6 @@
         <option value="CLOSE">Close</option>
       </select>
       <button id="btnLoad" class="btn btn--neutral btn--sm">Load Today</button>
-      
     </div>
   </header>
 
