--- a/screens/settings-users.html
+++ b/screens/settings-users.html
@@ -4,7 +4,7 @@
 
   <div class="flex" style="gap:10px; flex-wrap:wrap; margin:10px 0 16px;">
     <button id="btnRefresh" class="btn btn--neutral btn--sm">Refresh</button>
-    <a href="?page=settings&view=user-new" class="btn btn--primary btn--sm">Add user</a>
+    <a href="?page=settings-user-new" class="btn btn--primary btn--sm">Add user</a>
     <button id="btnInvite" class="btn btn--ghost btn--sm" title="Coming soon">Send invite (email)</button>
   </div>
 
